fix(components): add z-index to item on hover in Advantages for Home

--- a/src/components/pages/home/advantages/advantages.module.scss
+++ b/src/components/pages/home/advantages/advantages.module.scss
@@ -37,6 +37,7 @@
   transition: $transition-base;
 
   &:hover {
+    z-index: 1;
     background: linear-gradient(0deg, $color-tertiary, $color-tertiary), linear-gradient(234.34deg, #f8fafc 0%, $color-tertiary 100%);
     box-shadow: 0 30px 60px 10px rgba($color-primary, 0.25);
 
